feat: paginar cola de auditorias y mejorar UI
